--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,23 @@
+amqp==2.6.1
 appdirs==1.4.3
 APScheduler==3.6.3
 asgiref==3.3.1
 bcrypt==3.1.7
+billiard==3.6.4.0
 blinker==1.4
-Brlapi==0.7.0
 cachetools==4.2.2
+celery==4.4.2
 certifi==2019.11.28
 chardet==3.0.4
 chrome-gnome-shell==0.0.0
 Click==7.0
+click-didyoumean==0.0.3
+click-plugins==1.1.1
+click-repl==0.2.0
 colorama==0.4.3
 command-not-found==0.3
+coreapi==2.3.3
+coreschema==0.0.4
 cryptography==2.8
 cupshelpers==1.0
 dbus-python==1.2.16
@@ -19,22 +26,39 @@ defusedxml==0.7.1
 distlib==0.3.0
 distro==1.4.0
 distro-info===0.23ubuntu1
+dj-database-url==0.5.0
+dj-email-url==1.0.2
+dj-rest-auth==2.1.7
 Django==3.1.4
 django-allauth==0.43.0
+django-cache-url==3.2.3
+django-ckeditor==6.1.0
+django-cors-headers==3.7.0
 django-crispy-forms==1.10.0
 django-debug-toolbar==3.2
+django-extensions==3.1.3
+django-js-asset==1.2.2
+django-rest-framework==0.1.0
+django-taggit==1.4.0
 djangorestframework==3.12.4
+drf-yasg==1.20.0
 duplicity==0.8.12.0
 entrypoints==0.3
+environs==8.0.0
 fasteners==0.14.1
 filelock==3.0.12
 future==0.18.2
 gunicorn==20.1.0
 httplib2==0.14.0
+humanize==3.10.0
 idna==2.8
 importlib-metadata==1.5.0
+inflection==0.5.1
+itypes==1.2.0
+Jinja2==3.0.1
 kazam==1.5.3
 keyring==18.0.1
+kombu==4.6.11
 language-selector==0.1
 launchpadlib==1.10.13
 lazr.restfulclient==0.14.2
@@ -43,31 +67,39 @@ lockfile==0.12.2
 louis==3.12.0
 macaroonbakery==1.3.1
 Mako==1.1.0
-MarkupSafe==1.1.0
+Markdown==3.3.4
+MarkupSafe==2.0.1
+marshmallow==3.12.2
 monotonic==1.5
 more-itertools==4.2.0
 netifaces==0.10.4
 oauthlib==3.1.0
 olefile==0.46
+packaging==21.0
 paramiko==2.6.0
 pexpect==4.6.0
 Pillow==7.0.0
 pipenv==11.9.0
 playsound==1.2.2
+prometheus-client==0.11.0
+prompt-toolkit==3.0.19
 protobuf==3.6.1
+psycopg2-binary==2.9.1
 pycairo==1.16.2
 pycups==1.9.73
 Pygments==2.9.0
 PyGObject==3.36.0
-PyJWT==1.7.1
+PyJWT==2.1.0
 pymacaroons==0.13.0
 PyNaCl==1.3.0
+pyparsing==2.4.7
 PyPDF2==1.26.0
 pyRFC3339==1.1
 pyTelegramBotAPI==3.7.9
 python-apt==2.0.0+ubuntu0.20.4.4
 python-dateutil==2.7.3
 python-debian===0.1.36ubuntu1
+python-dotenv==0.18.0
 python-telegram-bot==13.6
 python-xlib==0.23
 python3-openid==3.2.0
@@ -79,10 +111,14 @@ reportlab==3.5.34
 requests==2.22.0
 requests-oauthlib==1.3.0
 requests-unixsocket==0.2.0
+ruamel.yaml==0.17.10
+ruamel.yaml.clib==0.2.6
 screen-resolution-extra==0.0.0
 SecretStorage==2.3.1
 simplejson==3.16.0
 six==1.14.0
+social-auth-app-django==4.0.0
+social-auth-core==4.1.0
 sqlparse==0.4.1
 systemd-python==234
 tornado==6.1
@@ -91,11 +127,14 @@ ubuntu-advantage-tools==27.0
 ubuntu-drivers-common==0.0.0
 ufw==0.36
 unattended-upgrades==0.1
+uritemplate==3.0.1
 urllib3==1.25.8
 usb-creator==0.3.7
+vine==1.3.0
 virtualenv==20.0.17
 virtualenv-clone==0.3.0
 wadllib==1.3.3
+wcwidth==0.2.5
 whitenoise==5.2.0
 xkit==0.0.0
 zipp==1.0.0
