--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,29 @@
 amqp==2.6.1
 appdirs==1.4.3
 APScheduler==3.6.3
+apturl==0.5.2
 asgiref==3.3.1
 bcrypt==3.1.7
 billiard==3.6.4.0
 blinker==1.4
+Brlapi==0.7.0
 cachetools==4.2.2
 celery==4.4.2
 certifi==2019.11.28
 chardet==3.0.4
+chrome-gnome-shell==0.0.0
 Click==7.0
 click-didyoumean==0.0.3
 click-plugins==1.1.1
 click-repl==0.2.0
 colorama==0.4.3
+command-not-found==0.3
 coreapi==2.3.3
 coreschema==0.0.4
 cryptography==2.8
+cupshelpers==1.0
 dbus-python==1.2.16
-
+defer==1.0.6
 defusedxml==0.7.1
 distlib==0.3.0
 distro==1.4.0
@@ -74,6 +79,7 @@ oauthlib==3.1.0
 olefile==0.46
 packaging==21.0
 paramiko==2.6.0
+pbr==5.6.0
 pexpect==4.6.0
 Pillow==7.0.0
 pipenv==11.9.0
@@ -118,6 +124,7 @@ social-auth-app-django==4.0.0
 social-auth-core==4.1.0
 sqlparse==0.4.1
 systemd-python==234
+testresources==2.0.1
 tornado==6.1
 tzlocal==2.1
 ubuntu-advantage-tools==27.0
